tests/positive/PackageLoaderV2/PackageJuvix/Package.juvix
module Package;

import PackageDescription.V2 open;

package : Package :=
  defaultPackage@{
    name := "package-juvix";
  };
