tests/negative/Package/PackageJuvixPackageSymbolWrongType1/Package.juvix
module Package;

import PackageDescription.V2 open;

package : Nat := 1;
